--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "floating-labels",
+  "name": "bootstrap-floating-labels",
   "version": "1.0.0",
   "description": "",
   "main": "dist/floating.labels.min.js",
